--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+chefdata/UNETE
+chefdata/flash_test_zip_dir
+
+
+# temporary json files for pre-channel stages
+chefdata/web_resource_tree.json
+chefdata/ricecooker_json_tree.json
+chefdata/ricecooker_json_tree_full.json
+chefdata/ricecooker_pruned_json_tree.json
+chefdata/zipfiles
+
+
+# requests cache dir
+.webcache
+
+# ricecooker caches
+storage
+restore
+.ricecookerfilecache
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
